<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/button_rotate"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/filter_rotate" />

    <Button
        android:id="@+id/button_invert"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/filter_invert" />

    <Button
        android:id="@+id/button_mirror"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/filter_mirror" />

    <Button
        android:id="@+id/button_clear"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/clear" />

    <CheckBox
        android:id="@+id/simulate_long_running"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/simulate_long_running_filtering" />

</LinearLayout>